# robot2D_breakout

./: .gitignore  CMakeLists.txt  README.md
cmake/: External_Inih.cmake
hakka/: CMakeLists.txt
hakka/incl/hakka/: Font.h  GL.h  RenderWindow.h  Shader.h  Text.h  Texture.h  Window.h
hakka/src/: Font.cpp  RenderTarget.cpp  RenderWindow.cpp  Shader.cpp  Text.cpp  Texture.cpp  Window.cpp
incl/game/: Action.h  Action.hpp  AppContext.hpp  Audio.h  AudioPlayer.hpp  Ball.hpp  BounceAnimation.hpp  Collisions.h  Collisions.hpp  Configuration.hpp  ContextIDs.hpp  EcsState.h  Entity.h  FileManager.hpp  Filesystem.hpp  GameObject.h  GameObject.hpp  GameState.h  GameState.hpp  GameUI.hpp  IDs.hpp  InputManager.hpp  IntroState.h  IntroState.hpp  Level.h  Level.hpp  MenuState.h  MenuState.hpp  Message.hpp  MessageBus.hpp  ParallaxEffect.hpp  Particle.h  Particle.hpp  ParticleEmitter.h  ParticleEmitter.hpp  PauseState.h  PauseState.hpp  Player.hpp  PostProcessing.h  PostProcessing.hpp  (+14 more)
incl/game/ecs/: Entity.h  Message.h  MessageBus.h  Scene.h  System.h
incl/game/gui/: Button.h  Button.hpp  Gui.hpp  INode.h  INode.hpp  Label.hpp  TextButton.hpp
res/shaders/: effects.fs  effects.vs
src/: Action.cpp  App.cpp  Audio.cpp  AudioPlayer.cpp  Ball.cpp  BounceAnimation.cpp  Collisions.cpp  Components.cpp  Configuration.cpp  EcsState.cpp  Entity.cpp  FileManager.cpp  FileSystem.cpp  FileSystem.hpp  FileSystemImpl.cpp  FileSystemImpl.hpp  GameObject.cpp  GameState.cpp  GameUI.cpp  InputManager.cpp  IntroState.cpp  Level.cpp  MenuState.cpp  MessageBus.cpp  ParallaxEffect.cpp  Particle.cpp  ParticleEmitter.cpp  PauseState.cpp  PostProcessing.cpp  PowerUp.cpp  PoweupSystem.cpp  Runner.cpp  Runner.hpp  Scene.cpp  SpriteRenderSystem.cpp  StateMachine.cpp  System.cpp  Timer.cpp  WinFileSystem.cpp  WinFileSystem.hpp  (+3 more)
src/ecs/: Entity.cpp  EntityManager.cpp  MessageBus.cpp  Scene.cpp  System.cpp  SystemManager.cpp
src/filesystem/: FileSystem.cpp  FileSystem.hpp  FileSystemImpl.cpp  FileSystemImpl.hpp  MacOSFileSystem.cpp  MacOSFileSystem.hpp  WinFileSystem.cpp  WinFileSystem.hpp
src/gui/: Button.cpp  Gui.cpp  INode.cpp  Label.cpp  TextButton.cpp
